--- a/config/database.yml
+++ b/config/database.yml
@@ -52,4 +52,5 @@ production:
   database: ore_memo_production
   username: orememo_admin
   password: <%= ENV['DATABASE_PASSWORD'] %>
+  host: db.home
   socket: /var/lib/mysql/mysql.sock
