参照先socket修正
コンテナ側にDB_HOSTNAMEの環境変数設定後

--- a/config/database.yml
+++ b/config/database.yml
@@ -54,4 +54,4 @@ production:
   password: <%= ENV['DATABASE_PASSWORD'] %>
   host: <%= ENV['DB_HOSTNAME'] %>
   # socket: /tmp/mysql.sock
-  # socket: /var/run/mysqld/mysqld.sock
+  socket: /var/run/mysqld/mysqld.sock
