--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "4.3.0",
-    "bootstrap": "^5.3.0",
+    "bootstrap": "5.1.3",
     "bootstrap-icons": "^1.10.5",
     "turbolinks": "^5.2.0"
   },
